--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "classnames": "^2.3.2",
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
+    "nanoid": "^5.0.7",
     "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-intl": "^6.6.8",
     "react-redux": "^9.1.2",
